--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,6 +12,6 @@ jobs:
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: Build Docker Image
-        run: docker build -t myusername/myapp:latest .
+        run: docker build -t sekbil/SimpleDockerCI-CD-Pipelinene:latest .
       - name: Push to Docker Hub
-        run: docker push myusername/myapp:latest
+        run: docker push sekbil/SimpleDockerCI-CD-Pipelinene:latest
